--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,2 +1,30 @@
-@import "modules/_variables.scss";
 @import "modules/_mixin.scss";
+
+html {
+  font-family: sans-serif;
+}
+
+.topBar {
+  background-color: rgb(45, 232, 223);
+  width: 100%;
+  height: 10px;
+}
+
+menu {
+  //line-height: 120px;    -- za bardzo "obniża" poziom tekstu
+  display: flex;
+  height: 120px;
+  margin: 30px auto;
+  width: 940px;
+  justify-content: space-between;
+  span {
+    margin-top: 54px;
+  }
+  .closerLeft {
+    margin-left: 93px;
+  }
+  .closerRight {
+    margin-right: 93px;
+  }
+}
+
