made hover read more effects

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -127,12 +127,17 @@ menu {
         letter-spacing: -2px;
       }
     }
+    .more:hover {
+      color: rgb(45, 232, 223);
+      cursor: pointer;
+    }
   }   
 }
 
 
 
 //
+
 
 
 
