--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,7 +36,7 @@ menu {
   }
 }
 
-.button {
+.button, #send {
   font-family: 'open sans regular';
   color: rgb(33, 179, 172);
   font-weight: lighter;  // próbowałem wszystkiego (np font-weight: 100;), ale font dalej jest za gruby.  
@@ -202,7 +202,8 @@ menu {
       }
     }
   }
-  .button {
+  #send {
+    border: none;
     width: 460px;
     height: 50px;
     font-size: 16px;
