GET method is now working

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -58,7 +58,6 @@ menu {
   border-top: 1px solid rgb(235, 235, 235);
   font-family: 'bree_serifregular';
   text-align: center;
-  height: 280px;
   font-size: 82px;
   color: rgb(34, 34, 34);
   padding-top: 41px;
@@ -294,6 +293,11 @@ footer {
 .highlight {
   background-color: yellow;
 }
+
+.orange {
+  color: rgb(238, 138, 85);
+}
+
 
 //
 
